add i18n for settings, about, preview, timezone

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,5 +12,23 @@
   "slots.selected": "{count} slots selected",
   "slots.selectedOne": "1 slot selected",
   "output.prefix": "I'm available:",
-  "copied": "Copied!"
+  "copied": "Copied!",
+  "settings.timezone": "Timezone",
+  "settings.timeFormat": "Time format",
+  "settings.interval": "Interval",
+  "settings.view": "View",
+  "settings.language": "Language",
+  "settings.about": "About",
+  "settings.ariaLabel": "Settings menu",
+  "about.title": "WTT - What Time Today",
+  "about.description": "Quickly select your available time slots and copy them as text to share via email, chat, or any messaging app.",
+  "about.tip1": "Tap or drag to select time slots",
+  "about.tip2": "Choose timezone for conversion",
+  "about.tip3": "Copy formatted availability text",
+  "about.tip4": "Works offline as PWA",
+  "about.github": "View on GitHub",
+  "about.issuePrompt": "Found a bug or have a feature request?",
+  "about.openIssue": "Open an issue",
+  "preview.empty": "Select time slots to see preview",
+  "timezone.you": "(You)"
 }
