--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -12,5 +12,23 @@
   "slots.selected": "{count} sloturi selectate",
   "slots.selectedOne": "1 slot selectat",
   "output.prefix": "Sunt disponibil:",
-  "copied": "Copiat!"
+  "copied": "Copiat!",
+  "settings.timezone": "Fus orar",
+  "settings.timeFormat": "Format ora",
+  "settings.interval": "Interval",
+  "settings.view": "Vizualizare",
+  "settings.language": "Limba",
+  "settings.about": "Despre",
+  "settings.ariaLabel": "Meniu setari",
+  "about.title": "WTT - What Time Today",
+  "about.description": "Selecteaza rapid intervalele orare disponibile si copiaza-le ca text pentru a le trimite prin email, chat sau orice aplicatie de mesagerie.",
+  "about.tip1": "Atinge sau trage pentru a selecta intervale",
+  "about.tip2": "Alege fusul orar pentru conversie",
+  "about.tip3": "Copiaza textul formatat cu disponibilitatea",
+  "about.tip4": "Functioneaza offline ca PWA",
+  "about.github": "Vezi pe GitHub",
+  "about.issuePrompt": "Ai gasit un bug sau ai o sugestie?",
+  "about.openIssue": "Deschide un issue",
+  "preview.empty": "Selecteaza intervale pentru previzualizare",
+  "timezone.you": "(Tu)"
 }
