--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -12,5 +12,23 @@
   "slots.selected": "{count} слотов выбрано",
   "slots.selectedOne": "1 слот выбран",
   "output.prefix": "Я доступен:",
-  "copied": "Скопировано!"
+  "copied": "Скопировано!",
+  "settings.timezone": "Часовой пояс",
+  "settings.timeFormat": "Формат времени",
+  "settings.interval": "Интервал",
+  "settings.view": "Вид",
+  "settings.language": "Язык",
+  "settings.about": "О приложении",
+  "settings.ariaLabel": "Меню настроек",
+  "about.title": "WTT - What Time Today",
+  "about.description": "Быстро выберите доступные временные слоты и скопируйте их как текст для отправки по email, в чат или любой мессенджер.",
+  "about.tip1": "Нажмите или перетащите для выбора слотов",
+  "about.tip2": "Выберите часовой пояс для конвертации",
+  "about.tip3": "Скопируйте отформатированный текст",
+  "about.tip4": "Работает офлайн как PWA",
+  "about.github": "Смотреть на GitHub",
+  "about.issuePrompt": "Нашли баг или есть предложение?",
+  "about.openIssue": "Создать issue",
+  "preview.empty": "Выберите слоты для предпросмотра",
+  "timezone.you": "(Вы)"
 }
